improve API for search books & improve documentation
